2007-06-27  Ben Motmans  <ben.motmans@gmail.com>

	* Providers/MySqlSchemaProvider.cs:
	GetDatabases, GetTableConstraints, GetViews, GetProcedures, GetViewColumns, GetProcedureColumns implementation
	improved support for MySql 5.x for the GetTables method
	* Providers/AbstractConnectionProvider.cs: abstract connection provider

2007-06-26  Ben Motmans  <ben.motmans@gmail.com>

	* Providers/SqlSchemaProvider.cs: use Convert.IsDbNull instead of try-catch
	* Providers/SqlSchemaProvider.cs: fixed sql bug in GetTableColumns method
	* Providers/SqlSchemaProvider.cs: implemented GetDataType method
	* Schema/DataTypeCategory.cs, Schema/DataTypeSchema.cs: added an enumeration to specify the category
	of the data type, this can be used in the future for data migration

2007-06-25  Ben Motmans  <ben.motmans@gmail.com>

	* Schema/TableSchema.cs, Schema/ViewSchema.cs, Schema/ProcedureSchema.cs, Schema/ColumnsSchema.cs,
	Schema/ConstraintSchema.cs: lazy loaded columns, parameters, definition, ... parameters
	* Providers/SqlSchemaProvider.cs: updated sql statements to allow lazy loading
	* Providers/SqlSchemaProvider.cs: implemeted GetDatabases method
	* Providers/SqlSchemaProvider.cs: implemented GetConstraints method
	* Schema/Range.cs, Schema/DataTypeSchema.cs: length, precision and scale range properties

2007-06-24  Ben Motmans  <ben.motmans@gmail.com>

	* Creation of designer, visualisation and query sub-projects
	* Providers/ConnectionSettings.cs: class to seperate connection settings from the connection provider

2007-06-23  Ben Motmans  <ben.motmans@gmail.com>

	* Providers/IDbProvider.cs: splitted into Providers/ISchemaProvider.cs and Providers/IConnectionProvider.cs
	* Providers/ISchemaProvider.cs: Use of generics where possible and logic
	* Providers/ISchemaProvider.cs: Added GetDatabases method

2007-06-22  Ben Motmans  <ben.motmans@gmail.com>

	* Imported code from MonoQuery

2007-06-01  Jeffrey Stedfast  <fejj@novell.com>
