@@ -1,10 +1,10 @@
 //
-// Schema/ParameterSchema.cs
-//
 // Authors:
-//   Christian Hergert	<chris@mosaix.net>
+//	Christian Hergert  <chris@mosaix.net>
+//	Ben Motmans  <ben.motmans@gmail.com>
 //
 // Copyright (C) 2005 Mosaix Communications, Inc.
+// Copyright (c) 2007 Ben Motmans
 //
 // Permission is hereby granted, free of charge, to any person obtaining
 // a copy of this software and associated documentation files (the
@@ -27,18 +27,24 @@
 //
 
 using System;
+using System.Collections.Generic;
 
 namespace Mono.Data.Sql
 {
 	public class GroupSchema : AbstractSchema
 	{
+		public GroupSchema (ISchemaProvider schemaProvider)
+			: base (schemaProvider)
+		{
+		}
+		
 		public UserSchema Users {
 			get {
 				throw new NotImplementedException ();
 			}
 		}
 		
-		public RoleSchema[] Roles {
+		public ICollection<RoleSchema> Roles {
 			get {
 				throw new NotImplementedException ();
 			}
