@@ -1,5 +1,14 @@
 2007-06-27  Ben Motmans  <ben.motmans@gmail.com>
 
+	* Schema/*.cs: constructor with SchemaProvider parameter
+	* Schema/*.cs: use of generic collections instead of arrays
+	* Providers/SqlSchemaProvider.cs: various small bugfixes
+	* Providers/SqlConnectionProvider.cs: implementation
+	* Providers/SqlSchemaProvider.cs: various small fixes for compile issues
+	* Providers/ConnectionSettings.cs: database property
+
+2007-06-27  Ben Motmans  <ben.motmans@gmail.com>
+
 	* Providers/MySqlSchemaProvider.cs:
 	GetDatabases, GetTableConstraints, GetViews, GetProcedures, GetViewColumns, GetProcedureColumns implementation
 	improved support for MySql 5.x for the GetTables method
